Solve clearing flatpickr field with event listener

--- a/lib/date_input_web/live/date_input_live.html.heex
+++ b/lib/date_input_web/live/date_input_live.html.heex
@@ -27,6 +27,6 @@
     </select>
   </div>
   <div>
-    <%= link("Reset", to: "#", phx_click: "reset") %>
+    <%= link("Reset", to: "#", phx_click: "reset", id: "reset-filters") %>
   </div>
 </form>
